[gd_scene load_steps=9 format=3 uid="uid://d0nkpdyoqawun"]

[ext_resource type="Script" uid="uid://bkekgoy4e6vcl" path="res://game/levels/main_menu/main_menu.gd" id="1_dvq8h"]
[ext_resource type="PackedScene" uid="uid://hqhyvp4gjw8i" path="res://game/autoload/ui/ui_button.tscn" id="1_kmt2n"]
[ext_resource type="Script" uid="uid://dkbckojlnpcyg" path="res://game/autoload/ui/wrapping_ui_list.gd" id="2_h51uc"]
[ext_resource type="Texture2D" uid="uid://nvrq67885fo2" path="res://game/copyrighted/textures/ui/Title.png" id="2_hj0c5"]
[ext_resource type="PackedScene" uid="uid://dymla6ms0yb56" path="res://game/autoload/ui/settings/settings_ui.tscn" id="4_8hw3k"]
[ext_resource type="PackedScene" uid="uid://c50y1s5he41oo" path="res://game/levels/main_menu/profiles/boss_fight_profiles_page.tscn" id="5_7argb"]
[ext_resource type="PackedScene" uid="uid://wnb0e26iehfc" path="res://game/levels/main_menu/quit_warning.tscn" id="6_63tbh"]
[ext_resource type="PackedScene" uid="uid://2otukgmbowln" path="res://game/levels/main_menu/main_menu_scene.tscn" id="8_hj0c5"]

[node name="MainMenu" type="Node3D"]

[node name="UI" type="Control" parent="." node_paths=PackedStringArray("_logo", "child_uis")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dvq8h")
_logo = NodePath("")
child_uis = [NodePath("MarginContainer/Contents"), NodePath("MarginContainer/SettingsUI"), NodePath("MarginContainer/BossFightProfilesPage"), NodePath("MarginContainer/QuitWarningPage")]

[node name="Animator" type="AnimationPlayer" parent="UI"]

[node name="MarginContainer" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Contents" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2

[node name="Title" type="TextureRect" parent="UI/MarginContainer/Contents"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_hj0c5")
stretch_mode = 3

[node name="CenterContainer" type="CenterContainer" parent="UI/MarginContainer/Contents"]
layout_mode = 2
size_flags_vertical = 3

[node name="MenuButtons" type="VBoxContainer" parent="UI/MarginContainer/Contents/CenterContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 96
script = ExtResource("2_h51uc")

[node name="SelectFightButton" parent="UI/MarginContainer/Contents/CenterContainer/MenuButtons" instance=ExtResource("1_kmt2n")]
layout_mode = 2
text = "Select Fight"

[node name="OptionsButton" parent="UI/MarginContainer/Contents/CenterContainer/MenuButtons" instance=ExtResource("1_kmt2n")]
layout_mode = 2
text = "Options"

[node name="QuitGameButton" parent="UI/MarginContainer/Contents/CenterContainer/MenuButtons" instance=ExtResource("1_kmt2n")]
layout_mode = 2
text = "Quit Game"

[node name="SettingsUI" parent="UI/MarginContainer" instance=ExtResource("4_8hw3k")]
visible = false
layout_mode = 2

[node name="BossFightProfilesPage" parent="UI/MarginContainer" instance=ExtResource("5_7argb")]
visible = false
layout_mode = 2

[node name="QuitWarningPage" parent="UI/MarginContainer" instance=ExtResource("6_63tbh")]
visible = false
layout_mode = 2

[node name="Scene" parent="." instance=ExtResource("8_hj0c5")]

[connection signal="pressed" from="UI/MarginContainer/Contents/CenterContainer/MenuButtons/SelectFightButton" to="UI" method="_on_select_fight_button_pressed"]
[connection signal="pressed" from="UI/MarginContainer/Contents/CenterContainer/MenuButtons/OptionsButton" to="UI" method="_on_options_button_pressed"]
[connection signal="pressed" from="UI/MarginContainer/Contents/CenterContainer/MenuButtons/QuitGameButton" to="UI" method="_on_quit_game_button_pressed"]
[connection signal="quit_confirmed" from="UI/MarginContainer/QuitWarningPage" to="UI" method="_on_quit_warning_page_quit_confirmed"]
